2011-11-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	warnings: fix buglets for portability warnings
	* lib/Automake/ChannelDefs.pm (switch_warning): Ensure the
	correct implications and inter-dependencies between warnings
	in the categories `portability', `extra-portability' and
	`recursive-portability' are respected.  Also add detailed
	explicative comments, and references to the relevant tests.
	* tests/dollarvar2.test: Update and extend.  Also, remove
	some unnecessary uses of `--force' option in automake calls.
	* tests/extra-portability3.test: New test.
	* tests/Makefile.am (TESTS): Add it.

2011-11-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: extend tests on 'extra-portability' warning category
	* tests/extra-portability.test: Redefine `$AUTOMAKE' to ensure we
	have complete control over the automake options.  Extend by using
	also a setup where no `portability' warning is present (only an
	`extra-portability' warning is).  Other minor extensions.  Remove
	some redundant, verbose comments about the expected diagnostic.

2011-11-03  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: various minor tweakings, mostly related to AM_PROG_AR
	* tests/alloca.test: Adjust to new portability requirements due
	to the new AM_PROG_AR macro.
	* tests/discover.test: Likewise.
	* tests/libobj3.test: Likewise.
	* tests/pluseq7.test: Likewise.  Also, make grepping of automake
	expected error message stricter.
	* tests/stdlib.test: Likewise, and extend the test a bit.
	* tests/parse.test (configure.in): Remove redundant call to
	AC_PROG_RANLIB.
	* tests/library2.test: Adjust to new portability requirements
	due to the new AM_PROG_AR macro.  Also ...
	(configure.in): ... add call to AC_PROG_CC, to ensure automake
	really fails for the expected reason.

2011-11-03  Zack Weinberg <zackw@panix.com>  (tiny change)
	    Stefano Lattarini  <stefano.lattarini@gmail.com>

	maint-mode: fix botched configure messages
	This change fixes automake bug#9890.