@@ -1,3 +1,13 @@
+2011-11-05  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	ar-lib: fix configure output for "unrecognized archiver interface"
+	* m4/ar-lib.m4: Ensure that, even when an error is hit while trying
+	to determine the archiver interface kind, the "checking archiver
+	interface" message from configure is properly terminated before
+	an error message is printed, to avoid slightly garbled output.
+	* tests/ar4.test: Enhance.
+	* tests/ar5.test: Likewise.
+
 2011-11-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	warnings: fix buglets for portability warnings
